--- a/dbinspector/src/main/res/values-night/colors.xml
+++ b/dbinspector/src/main/res/values-night/colors.xml
@@ -2,4 +2,5 @@
 <resources>
     <color name="dbinspector_header_background">#2a2a2a</color>
     <color name="dbinspector_alternate_row_background">#353535</color>
+    <color name="dbinspector_status_bar">@android:color/transparent</color>
 </resources>
