--- a/dbinspector/src/main/res/layout/dbinspector_layout_empty.xml
+++ b/dbinspector/src/main/res/layout/dbinspector_layout_empty.xml
@@ -2,15 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:layout_gravity="center"
     android:gravity="center"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:paddingStart="16dp"
+    android:paddingEnd="16dp">
 
     <ImageView
-        android:layout_width="180dp"
-        android:layout_height="180dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:src="@drawable/dbinspector_empty" />
 
     <com.google.android.material.textview.MaterialTextView
@@ -31,11 +32,11 @@
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/retryButton"
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
         android:layout_width="wrap_content"
-        android:layout_height="?attr/listPreferredItemHeight"
+        android:layout_height="?attr/listPreferredItemHeightSmall"
         android:layout_marginTop="16dp"
-        android:minWidth="120dp"
         android:text="@string/dbinspector_retry"
-        app:cornerRadius="32dp" />
+        app:cornerRadius="24dp" />
 
 </LinearLayout>
