--- a/dbinspector/src/main/res/menu/dbinspector_pragma.xml
+++ b/dbinspector/src/main/res/menu/dbinspector_pragma.xml
@@ -1,12 +1,4 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<menu xmlns:tools="http://schemas.android.com/tools"
     tools:ignore="AlwaysShowAction">
-
-    <item
-        android:id="@+id/refresh"
-        android:icon="@drawable/dbinspector_ic_refresh"
-        android:title="@string/dbinspector_action_refresh"
-        app:showAsAction="always" />
 
 </menu>
