--- a/dbinspector/src/main/res/layout/dbinspector_activity_databases.xml
+++ b/dbinspector/src/main/res/layout/dbinspector_activity_databases.xml
@@ -37,6 +37,8 @@
                 android:id="@+id/recyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:clipToPadding="false"
+                android:paddingBottom="80dp"
                 android:scrollbars="vertical"
                 tools:listitem="@layout/dbinspector_item_database" />
 
@@ -50,5 +52,15 @@
             android:visibility="gone" />
 
     </FrameLayout>
+
+    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+        android:id="@+id/importButton"
+        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal|bottom"
+        android:layout_marginBottom="16dp"
+        android:text="@string/dbinspector_action_import"
+        app:icon="@drawable/dbinspector_ic_import" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
