--- a/dbinspector/src/main/res/values/themes.xml
+++ b/dbinspector/src/main/res/values/themes.xml
@@ -4,6 +4,8 @@
     <style name="DbInspector.BaseTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="colorPrimary">@color/dbinspector_color_primary</item>
         <item name="colorPrimaryDark">@color/dbinspector_color_primary_dark</item>
+        <item name="colorSecondary">@color/dbinspector_color_primary</item>
+        <item name="colorOnSecondary">@android:color/white</item>
         <item name="android:statusBarColor">@color/dbinspector_status_bar</item>
     </style>
 
