--- a/dbinspector/src/main/res/layout/dbinspector_activity_schema.xml
+++ b/dbinspector/src/main/res/layout/dbinspector_activity_schema.xml
@@ -34,14 +34,12 @@
             android:layout_height="wrap_content"
             app:tabMode="fixed" />
 
-        <androidx.viewpager.widget.ViewPager
+        <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/viewPager"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            tools:ignore="NestedWeights">
-
-        </androidx.viewpager.widget.ViewPager>
+            tools:ignore="NestedWeights" />
 
     </LinearLayout>
 
