--- a/dbinspector/src/main/res/layout/dbinspector_activity_content.xml
+++ b/dbinspector/src/main/res/layout/dbinspector_activity_content.xml
@@ -33,7 +33,7 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerView"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:scrollbars="vertical" />
 
         </HorizontalScrollView>
