Prepare activity alias export

--- a/dbinspector/src/main/res/values/public.xml
+++ b/dbinspector/src/main/res/values/public.xml
@@ -2,4 +2,5 @@
 <!-- This file should make other resources private during build -->
 <resources>
     <public />
+    <string name="dbinspector_name">DbInspector</string>
 </resources>
