--- a/dbinspector/src/main/res/layout/dbinspector_activity_content.xml
+++ b/dbinspector/src/main/res/layout/dbinspector_activity_content.xml
@@ -18,7 +18,7 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+    <com.infinum.dbinspector.ui.shared.views.SlopedSwipeRefreshLayout
         android:id="@+id/swipeRefresh"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -38,6 +38,6 @@
 
         </HorizontalScrollView>
 
-    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+    </com.infinum.dbinspector.ui.shared.views.SlopedSwipeRefreshLayout>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
