--- a/dbinspector/src/main/res/layout/dbinspector_item_cell.xml
+++ b/dbinspector/src/main/res/layout/dbinspector_item_cell.xml
@@ -14,6 +14,7 @@
         android:gravity="center_vertical"
         android:maxWidth="152dp"
         android:minHeight="40dp"
+        android:maxLines="3"
         android:paddingStart="2dp"
         android:paddingEnd="2dp" />
 
