--- a/dbinspector/src/main/res/xml/dbinspector_filepaths.xml
+++ b/dbinspector/src/main/res/xml/dbinspector_filepaths.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <paths>
+
     <files-path
         name="databases"
         path="../databases/" />
+
+    <cache-path
+        name="cache"
+        path="." />
+
 </paths>
